[package]
name = "libb2b"
version = "0.1.0"
authors = ["Jeremy Blackburn <jeremy.blackburn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio-serde = { version = "0.8", features = ["cbor", "messagepack", "json", "bincode"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.6", features = ["full"] }
#tokio-stream = { version = "0.1" }
futures = { version = "0.3", features = ["thread-pool"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.5", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
bytes = "1"
structopt = "0.3"
rand = "0.8"
async-channel = "1.6"


